Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34953

tablename of CONSTRAINT FOREIGN KEY REFERENCES case error

    XMLWordPrintable

Details

    • Not for ES Release Notes
    • Hide
      Innodb did not handle case-sensitivity on Windows correctly prior to this fix in its data dictionary, converting all names to lowercase. This resulted in inconsistency, if data directory was in case-sensitive NTFS directory, as well as in situations when data directory was copied from Windows to Unix systems.

      This is fixed in this patch.
      Show
      Innodb did not handle case-sensitivity on Windows correctly prior to this fix in its data dictionary, converting all names to lowercase. This resulted in inconsistency, if data directory was in case-sensitive NTFS directory, as well as in situations when data directory was copied from Windows to Unix systems. This is fixed in this patch.
    • Q3/2025 Maintenance, Q4/2025 Server Maintenance

    Description

      after table creation with foreign key constraint, the reference table name is defined in lowercase, even it was provided in upper case.

      CREATE TABLE `FAMILY_PARENT` (
        `PARENT_ID` char(36) NOT NULL,
        `PARENT_NAME` varchar(200) NOT NULL,
        PRIMARY KEY (`PARENT_ID`)
      ) ENGINE=InnoDB  ;
       
      CREATE TABLE `FAMILY_CHILD` (
        `PARENT_ID` char(36) NOT NULL,
        `CHILD_NAME` varchar(200) NOT NULL,
        PRIMARY KEY (`PARENT_ID`,`CHILD_NAME`),
        CONSTRAINT `CHILD_FK` FOREIGN KEY (`PARENT_ID`) REFERENCES `FAMILY_PARENT` (`PARENT_ID`) ON DELETE CASCADE
      ) ENGINE=InnoDB  ;
       
      SHOW CREATE TABLE `FAMILY_CHILD`;
       
      CREATE TABLE `FAMILY_CHILD` (
         `PARENT_ID` char(36) NOT NULL,
         `CHILD_NAME` varchar(200) NOT NULL,
         PRIMARY KEY (`PARENT_ID`,`CHILD_NAME`),
         CONSTRAINT `CHILD_FK` FOREIGN KEY (`PARENT_ID`) REFERENCES `family_parent` (`PARENT_ID`) ON DELETE CASCADE
       ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci
      

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              mbanaouas mohamed banaouas
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.25d
                  3.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.