MDEV-34953 Innodb bugs with lower_case_table_names=0 on Windows

If lower_case_table_names=0 were used (in case-sensitive directory,
see https://learn.microsoft.com/en-us/windows/wsl/case-sensitivity),
Innodb still handles Windows as special case, and forces lowercasing
in its dictionary.

To fix, remove #ifdef places that handle Windows specially with regard
to filename casing.